feat: domain setup for meetspace.events

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ ENVIRONMENT=development
 
 # API key prefix: ms_live_ (production) or ms_test_ (development)
 API_KEY_PREFIX=ms_test_
+
+# CORS origins (JSON array). Overrides the defaults in config.py.
+# CORS_ORIGINS=["https://yourdomain.com","https://www.yourdomain.com"]
